10. Agrege suscripción, cambie la cabecera maestra y puse todo azul

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Hyperblog<span id="tagline">Tu blog de confianza</span>
+            Hyperblog<span id="tagline">Tu blog de maestro</span>
         </div>
         <div id="post">
             <h1>Este es el título del atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increeibles que se pueden hacer con ramas</p>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque nulla rem expedita repellat corrupti iste tenetur fugiat hic quidem modi, libero tempora? Culpa odit eveniet eos quasi incidunt expedita dolores!</p>
+            <p>Suscribete y dale Like</p>
         </div>
     </div>
 </body>
