Footer terminado por Anita

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque nulla rem expedita repellat corrupti iste tenetur fugiat hic quidem modi, libero tempora? Culpa odit eveniet eos quasi incidunt expedita dolores!</p>
             <p>Suscribete y dale Like</p>
         </div>
+        <div id="footer">
+            Hecho con amor en Platzi ❤️
+        </div>
     </div>
 </body>
 </html>
