--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div id="post">
             <h1>Este es el título del atractivo e interesante del post</h1>
-            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increeibles que se pueden hacer con ramas</p>
+            <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque nulla rem expedita repellat corrupti iste tenetur fugiat hic quidem modi, libero tempora? Culpa odit eveniet eos quasi incidunt expedita dolores!</p>
             <p>Suscribete y dale Like</p>
         </div>
